--- a/fe-admin/src/components/pages/auth/LoginPage.css
+++ b/fe-admin/src/components/pages/auth/LoginPage.css
@@ -88,3 +88,29 @@
   margin-top: 5px;
   font-weight: bold;
 }
+
+/* Nút đăng nhập */
+.btn-login {
+  display: inline-block;
+  width: 70%;
+  padding: 12px 20px;
+  font-size: 1rem;
+  font-weight: bold;
+  color: #fff;
+  background-color: #ee197c; 
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  text-align: center;
+}
+
+.btn-login:hover {
+  background-color: #e21067; 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.btn-login:disabled {
+  background-color: #bdc3c7; 
+  cursor: not-allowed;
+}
